client/scss/imports/_add-button.scss
.button-add {
  $radius: 24px;
  position: absolute;
  top: calc(#{-$radius} - #{$padding-site-main});
  right: .5rem;
  width: 2 * $radius;
  height: 2 * $radius;
  box-shadow:
    0px 2px 10px rgba(0,0,0,.3),
    0px 0px 1px rgba(0,0,0,.1),
    inset 0px 1px 0px rgba(255,255,255,.25),
    inset 0px -1px 0px rgba(0,0,0,.15);
  background-color: $color-info;
  color: $color-white;
  border-radius: 50%;
  text-align: center;
  text-indent: -999px;
  overflow: hidden;
  cursor: pointer;
  &:hover, &:focus {
    background-color: $color-info--hover;
  }
  &:before,
  &:after {
    content: '';
    position: absolute;
    top: $radius - 1px;
    left: $radius * .75;
    background-color: currentColor;
    width: $radius / 2;
    height: 2px;
  }
  &:after {
    transform: rotate(90deg);
  }
}

.btn__icon-wrapper {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
}
.btn__icon-img {
  opacity: .64;
}
.btn__icon-text {
  margin-left: .5em;
}
&:hover, &:focus {
  .btn__icon-img {
    opacity: 1;
  }
}

.dat-header-action {
  .btn__icon-img {
    width: 100%;
    max-width: 1.25rem;
    max-height: 1rem;
  }
}

.btn__reveal-text {
  .btn__icon-text {
    transition-property: width, margin, opacity;
    transition-duration: $transition-duration;
    transition-timing-function: $transition-timing-function;
    transition-timing-function: 1s;
  }
  &:not(:hover) {
    .btn__icon-text {
      width: 0;
      margin-left: 0;
      opacity: 0;
    }
  }
}

